--- a/css/menu-nav.css
+++ b/css/menu-nav.css
@@ -305,7 +305,7 @@ img {
 }
 .classy-navbar-toggler .navbarToggler span {
 	position: relative;
-	background-color: #252525;
+	background-color: #fff;
 	border-radius: 3px;
 	display: block;
 	height: 3px;
