--- a/css/media.css
+++ b/css/media.css
@@ -1,4 +1,13 @@
 /*Extra small devices (portrait phones, less than 576px)*/
+@media (max-width: 300px){
+
+    .email-address {
+        font-size: 14px;
+        line-height: 22px;
+      }
+}
+
+/*Extra small devices (portrait phones, less than 576px)*/
 @media (max-width: 575.98px){
 
 /*Home page start*/
@@ -93,6 +102,21 @@
    
 /*Section1 start*/
       
+.content-heading4 {
+    font-size: 44px !important;
+    line-height: 50px !important;
+}
+.content-heading3 {
+    font-size: 24px !important;
+}
+
+
+
+
+
+
+
+
 .heading-section .heading-1 {
     font-size: 16px;
     line-height: 22px;
@@ -368,7 +392,11 @@
 .category_left-contentbox::before{
     display: none;
 }    
-    
+  
+.feedback-box1, .feedback-box2 {
+    border-right: none;
+}
+
     
 .get_a_quotebox {
     display: flex;
@@ -603,7 +631,9 @@
 @media (min-width: 576px) and (max-width: 767.98px){
 
 /*Home page start*/
-
+.sm-mt-0{
+    margin-top: 0 !important;
+}
 
     
     
@@ -813,6 +843,10 @@
     
 /*Section3 end*/    
  
+.feedback-box1, .feedback-box2 {
+    border-right: none;
+}
+
 .mb-d-none{
     display: none;
 }
@@ -1003,7 +1037,9 @@
 @media (min-width: 768px) and (max-width: 999.98px){
     
 /*Home page start*/
-
+.md-mt-0{
+    margin-top: 0 !important;
+}
 
     
     
@@ -1182,6 +1218,11 @@
     padding-top: 50px;
     padding-bottom: 50px;
 }
+
+.feedback-box2 {
+    border-right: none;
+}
+
 .infobox2 {
     padding-left: 20px;
 }    
@@ -1863,7 +1904,7 @@
 }    
 .main-header{
     padding: 0 0;
-    padding-left: 15px;
+    padding-left: 0px;
     justify-content: space-between;
     border-bottom: none;
 }   
@@ -1975,8 +2016,8 @@
 } 
 .banner-contentbox .banner-heading2 {
     /* text-align: center; */
-    font-size: 38px;
-    line-height: 44x;
+    font-size: 36px;
+    line-height: 42px;
     margin-top: 0px;
     margin-left: 0;
 }    
@@ -2152,10 +2193,25 @@
     width: 100%;
 }    
 .content-heading2 {
-    font-size: 24px;
-    line-height: 30px;
+    font-size: 22px;
+    line-height: 26px;
 }    
-    
+.heading-box3 {
+    margin: 15px 15px 15px 15px;
+    padding: 10px;
+  } 
+  .aboutpage_section3 .content-heading3{
+    margin-bottom: 0;
+  }  
+  .product_con {
+    margin-top: 30px;
+  } 
+  .card-wraper {
+    width: 100%;
+    height: 100%;
+    padding: 15px 15px 15px 15px;
+  }
+
 .heading-element {
     position: absolute;
     left: 0px;
@@ -2839,7 +2895,10 @@
     width: calc(100% - 35px);
     padding-left: 10px;
 }
-
+.faq_box .accordion-header .accordion-button {
+    font-size: 14px !important;
+    line-height: 20px;
+  }
 
 
 
